--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eska</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
 
     <div class="nav-container">
         <div class="wrapper">
           <nav>
-                <div class="logo"> .logo
-                    <img id="logo" src="images/logo.png" alt="logo" /> #logo
+                <div class="logo">
+                    <img id="logo" src="assets/img/logo.png" alt="logo" />
                 </div>
 
             <ul class="nav-items">
                 <li>
                     <a href="#">O nas</a>
                 </li>
-                 <li>
+                 <li class="nav-item-active">
                     <a href="#">Produkty</a>
-                    <img class="strzalka" src="images/strzalka.png" alt="strzalka"
                 </li>
                  <li>
                     <a href="#">Kontakt</a>
@@ -35,14 +34,14 @@
            <div class="wrapper">
                <header>
                    <div class="baner">
-                     <img src="images/prost.png" alt="tlobane"/>
-                     <img src="images/1.png" alt="baner1"/>
-                     <img src="images/2.png" alt="baner2"/>
-                     <img src="images/3.png" alt="baner3"/>
+                     <img src="assets/img/prost.png" alt="tlobane"/>
+                     <img src="assets/img/1.png" alt="baner1"/>
+                     <img src="assets/img/2.png" alt="baner2"/>
+                     <img src="assets/img/3.png" alt="baner3"/>
                </header>
            </div>
        </div>
 
-    <script src="main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
