--- a/index.html
+++ b/index.html
@@ -5,64 +5,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eska</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
-<div class="nav-container">
-    <div class="wrapper">
-    <nav>
-        <div class="logo">
-            <img id="logo" src="assets/img/logo.png" alt="logo" />
-        </div>
+    <div class="nav-container">
+        <div class="wrapper">
+            <nav>
+                <div class="logo">
+                    <img id="logo" src="assets/img/logo.png" alt="logo" />
+                </div>
 
-    <ul class="nav-items">
-        <li>
-            <a href="#">O nas</a>
-        </li>
-            <li class="nav-item-active">
-            <a href="#">Produkty</a>
-        </li>
-            <li>
-            <a href="#">Kontakt</a>
-        </li>
-        </ul>
-    </nav>
-    </div>
-</div>
-
-       <div class="header-container">
-           <div class="wrapper">
-               <div>
-                   <div class="baner"
-                     <img src="assets/img/prost.png" alt="tlobane"/>
-                     <div class="col-sm-4"><img src="assets/img/1.png" class="img-responsive"  /></div>
-                     <div class="col-sm-4"><img src="assets/img/2.png" class="img-responsive"  /></div>
-                     <div class="col-sm-4"><img src="assets/img/3.png" class="img-responsive" /></div>
-           </div>
-       </div>
-       </div>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-4">
-            <img src="assets/img/1.png" class="img-responsive" width="150px"  />
-        </div>
-        <div class="col-md-4">
-            <img src="assets/img/2.png"  class="img-responsive" width="150px"  />
-        </div>
-        <div class="col-md-4">
-            <img src="assets/img/3.png" class="img-responsive" width="150px"   />
+                <ul class="nav-items">
+                    <li>
+                        <a href="#">O nas</a>
+                    </li>
+                    <li class="nav-item-active">
+                        <a href="#">Produkty</a>
+                    </li>
+                    <li>
+                        <a href="#">Kontakt</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
-</div>
 
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <div class="container">
+        <div class="wrapper">
+            <div>
+                <div class="baner">
+                    <img src="assets/img/1.png" class="img-responsive" />
+                    <img src="assets/img/2.png" class="img-responsive" />
+                    <img src="assets/img/3.png" class="img-responsive" />
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <img src="assets/img/1.png" class="img-responsive" width="150px"  />
+            </div>
+            <div class="col-md-4">
+                <img src="assets/img/2.png"  class="img-responsive" width="150px"  />
+            </div>
+            <div class="col-md-4">
+                <img src="assets/img/3.png" class="img-responsive" width="150px"   />
+            </div>
+        </div>
+    </div>
+
+    <!-- Optional JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
 
     <script src="assets/js/main.js"></script>
-      </body>
-    </html>
+</body>
+</html>
